--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,14 @@
 * {
   box-sizing: border-box;
+  border: none;
   padding: 0;
   margin: 0;
+}
+
+
+body {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
 }
