--- a/src/features/styles/WeekTimetableInfo.module.css
+++ b/src/features/styles/WeekTimetableInfo.module.css
@@ -1,7 +1,38 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    width: 100%;
+    height: 90%;
+    
+}
+
+
+.timetable {
     display: grid;
     width: 95%;
     grid-template-columns: repeat(6, 1fr);
-    column-gap: 10px;
-    row-gap: 10px;
+}
+
+
+.container_dayinfo {
+    padding: 0 0 0 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 8vh;
+    border: 1px solid #adb5bd;
+    border-top: none;
+    border-bottom: 2px solid black;
+}
+
+
+.container_event {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: none;
+    border: 1px solid  #adb5bd;
 }
