--- a/src/widgets/styles/TodayTimetable.module.css
+++ b/src/widgets/styles/TodayTimetable.module.css
@@ -1,23 +1,24 @@
 .container {
     width: 20%;
-    border: 2px solid green;
 }
 
 
 .container_dayinfo {
-    padding: 0 0 0 5%;
+    padding: 0 0 0 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 10%;
-    border: 2px solid black;
 }
 
 
 .container_events {
-    padding: 5%;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    row-gap: 10px;
     align-items: center;
+    overflow-y: scroll;
     width: 100%;
+    height: 90%;
 }
