--- a/src/app/styles/styles_widgets/EventInfo.module.css
+++ b/src/app/styles/styles_widgets/EventInfo.module.css
@@ -1,4 +1,5 @@
-.container {
+.container,
+.container_hidden {
     padding: 20px;
     position: absolute;
     display: flex;
@@ -11,6 +12,11 @@
     background-color: white;
     border: 2px solid #04a777;
     border-radius: 10px;
+}
+
+
+.container_hidden {
+    display: none;
 }
 
 
