Added home page. Filters, templates, backlight and fetches not added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,12 @@
 
 
 * {
-  font-family: 'Roboto', serif;
   box-sizing: border-box;
   border: none;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', serif;
+  font-weight: 500;
 }
 
 
