--- a/src/app/styles/styles_shared/NavigatorButton.module.css
+++ b/src/app/styles/styles_shared/NavigatorButton.module.css
@@ -1,6 +1,10 @@
 .button {
-    width: 2vw;
-    height: 2vw;
-    border-radius: 2vw;
-    background-color: grey;
+    padding: 1vw;
+    border-radius: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #dee2e6;
 }
