--- a/src/app/styles/styles_entities/AuthWindow.module.css
+++ b/src/app/styles/styles_entities/AuthWindow.module.css
@@ -7,4 +7,16 @@
     background-color: #f8f9fa;
     border: 2px solid green;
     border-radius: 10px;
+    box-shadow: 0 0 10px 5px #adb5bd;
+}
+
+
+.container_button {
+    padding: 0 0 0 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    width: 100%;
+    height: 20%;
+    column-gap: 1.5em;
 }
