--- a/src/app/styles/styles_features/SignupSection.module.css
+++ b/src/app/styles/styles_features/SignupSection.module.css
@@ -7,3 +7,11 @@
     width: 100%;
     height: 60%;
 }
+
+
+.container_button {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 15%;
+}
