--- a/src/app/styles/styles_shared/EventInfoText.module.css
+++ b/src/app/styles/styles_shared/EventInfoText.module.css
@@ -1,4 +1,17 @@
 .text {
-    width: 80%;
+    padding: 10px;
+    width: 90%;
+    height: 6em;
+    border-radius: 10px;
+    outline: 3px solid #adb5bd;
+    font-size: 1em;
     resize: none;
+}
+
+.text::placeholder {
+    color: #adb5bd;
+}
+
+.text:focus {
+    outline-color: black;
 }
