--- a/src/app/styles/styles_shared/WeekInfo.module.css
+++ b/src/app/styles/styles_shared/WeekInfo.module.css
@@ -2,4 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 17.5%;
+}
+
+
+.parity {
+    color: #6c757d;
 }
