--- a/src/app/styles/styles_widgets/Event.module.css
+++ b/src/app/styles/styles_widgets/Event.module.css
@@ -1,28 +1,27 @@
-.container_clear {
-    width: 100%;
-    height: 100%;
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: grey;
-}
-
-
-.container_fulfilled {
+.container {
     padding: 5%;
     display: flex;
     flex-direction: column;
     row-gap: 5px;
     width: 100%;
+    height: 100%;
     border: 2px solid black;
     border-radius: 10px;
-    background-color: white;
+    background-color: #f8f9fa;
+    cursor: pointer;
 }
 
 
-.container_clear:active,
-.container_fulfilled:active {border-color: green;}
+.subject {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 
-.button:active {
-    background-color: green;
+.time {
+    margin: 8% 0 0 0;
 }
