--- a/src/app/styles/styles_widgets/EventInfoTextBlock.module.css
+++ b/src/app/styles/styles_widgets/EventInfoTextBlock.module.css
@@ -1,17 +1,15 @@
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 10px;
     width: 100%;
-    height: 60%;
+    row-gap: 1em;
 }
 
 
 .container_button {
+    padding: 0 0 0 10px;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     width: 100%;
-    height: 15%;
+    column-gap: 1em;
 }
