--- a/src/app/styles/styles_widgets/TodayTimetable.module.css
+++ b/src/app/styles/styles_widgets/TodayTimetable.module.css
@@ -1,5 +1,6 @@
 .container {
     width: 20%;
+    background-color: #f8f9fa;
 }
 
 
@@ -9,6 +10,7 @@
     flex-direction: column;
     justify-content: center;
     height: 10%;
+    box-shadow: 0 5px 10px 0 #6c757d;
 }
 
 
@@ -16,9 +18,10 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
     align-items: center;
+    row-gap: 10px;
     overflow-y: scroll;
+    scrollbar-color: #adb5bd transparent;
     width: 100%;
     height: 90%;
 }
