Added template page, filters, backlight. Fetches, action notices and animations not added

--- a/src/app/styles/styles_entities/AuthWindow.module.css
+++ b/src/app/styles/styles_entities/AuthWindow.module.css
@@ -5,7 +5,7 @@
     width: 30%;
     height: 70%;
     background-color: #f8f9fa;
-    border: 2px solid green;
+    border: 3px solid #57cc99;
     border-radius: 10px;
     box-shadow: 0 0 10px 5px #adb5bd;
 }
