--- a/src/app/styles/styles_entities/Navigator.module.css
+++ b/src/app/styles/styles_entities/Navigator.module.css
@@ -7,15 +7,6 @@
 }
 
 
-.container_account {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 10%;
-}
-
-
 .container_navigator {
     display: flex;
     flex-direction: column;
@@ -27,14 +18,7 @@
 }
 
 
-.button_acc {
-    width: 3vw;
-    height: 3vw;
-    cursor: pointer;
-}
-
-
 .button_nav {
-    width: 2vw;
-    height: 2vw;
+    width: 2vw !important;
+    height: 2vw !important;
 }
