--- a/src/app/styles/styles_shared/AuthButton.module.css
+++ b/src/app/styles/styles_shared/AuthButton.module.css
@@ -6,16 +6,14 @@
     font-size: larger;
 }
 
-
 .button {
     background-color: transparent;
-    border: 4px solid green;
-    color: green;
+    border: 4px solid #57cc99;
+    color: #57cc99;
 }
 
-
 .button_active {
-    background-color: green;
+    background-color: #57cc99;
     color: #f8f9fa;
     cursor: pointer;
 }
