--- a/src/app/styles/styles_shared/EventInfoCheckbox.module.css
+++ b/src/app/styles/styles_shared/EventInfoCheckbox.module.css
@@ -3,23 +3,72 @@
 }
 
 
-.label {
+.label_practice,
+.label_lecture,
+.label_test,
+.label_project,
+.label_colloquium,
+.label_homework {
     padding: 5px;
-    display: inline-flex;
-    border: 3px solid green;
-    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-radius: 1em;
     background-color: #f8f9fa;
     font-size: 1em;
     cursor: pointer;
 }
 
-
-label .input:checked + .label {
-    background-color: green;
-    color: #f8f9fa;
+.label_practice {
+    border: 3px solid #FFFAA0;
+    color: #FFAA33;
 }
 
+label .input:checked + .label_practice {
+    background-color: #FFFAA0;
+}
 
+.label_lecture {
+    border: 3px solid #f3d5b5;
+    color: #b08968;
+}
 
+label .input:checked + .label_lecture {
+    background-color: #f3d5b5;
+}
 
+.label_test {
+    border: 3px solid #c7f9cc;
+    color: #38a3a5;
+}
 
+label .input:checked + .label_test {
+    background-color: #c7f9cc;
+}
+
+.label_project {
+    border: 3px solid #ffccd5;
+    color: #c9184a;
+}
+
+label .input:checked + .label_project {
+    background-color: #ffccd5;
+}
+
+.label_colloquium {
+    border: 3px solid #caf0f8;
+    color: #0077b6;
+}
+
+label .input:checked + .label_colloquium {
+    background-color: #caf0f8;
+}
+
+.label_homework {
+    border: 3px solid #e0aaff;
+    color: #5a189a;
+}
+
+label .input:checked + .label_homework {
+    background-color: #e0aaff;
+}
