--- a/src/app/styles/styles_shared/EventInfoInput.module.css
+++ b/src/app/styles/styles_shared/EventInfoInput.module.css
@@ -2,7 +2,7 @@
     padding: 10px;
     width: 80%;
     border-radius: 10px;
-    outline: 3px solid #adb5bd;
+    outline: 3px solid #ced4da;
     font-size: larger;
 }
 
