--- a/src/app/styles/styles_shared/EventInfoText.module.css
+++ b/src/app/styles/styles_shared/EventInfoText.module.css
@@ -1,9 +1,9 @@
 .text {
     padding: 10px;
     width: 90%;
-    height: 6em;
+    height: calc(6em + 1px);
     border-radius: 10px;
-    outline: 3px solid #adb5bd;
+    outline: 3px solid #ced4da;
     font-size: 1em;
     resize: none;
 }
