--- a/src/app/styles/styles_features/TemplatesCatalog.module.css
+++ b/src/app/styles/styles_features/TemplatesCatalog.module.css
@@ -39,7 +39,17 @@
     row-gap: 10px;
     border-radius: 10px;
     width: 20vw;
+    min-height: 20vh;
     max-height: 80vh;
     background-color: #f8f9fa;
     box-shadow: 0 0 10px 0 #6c757d;
+}
+
+
+.container_loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20vh;
 }
