--- a/src/app/styles/styles_features/WeekTimetableInfo.module.css
+++ b/src/app/styles/styles_features/WeekTimetableInfo.module.css
@@ -28,6 +28,15 @@
 }
 
 
+.container_loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 82vh;
+}
+
+
 .container_dayinfo {
     padding: 0 0 0 10px;
     display: flex;
