--- a/src/app/styles/styles_shared/AccountButton.module.css
+++ b/src/app/styles/styles_shared/AccountButton.module.css
@@ -15,3 +15,33 @@
     height: 3vw !important;
     color: #57cc99;
 }
+
+
+.container_window {
+    position: absolute;
+    left: 5.7vw;
+    width: 15.7vw;
+    height: 10vh;
+    background-color: #f8f9fa;
+}
+
+
+.container_window_hidden {
+    display: none;
+}
+
+
+.button_window {
+    width: 100%;
+    height: 50%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.button_window:hover {
+    background-color: #e9ecef;
+}
+
+.button_window:active {
+    color: #57cc99;
+}
