--- a/src/app/styles/styles_widgets/TemplatesBoard.module.css
+++ b/src/app/styles/styles_widgets/TemplatesBoard.module.css
@@ -25,3 +25,12 @@
     width: 100%;
     height: 90%;
 }
+
+
+.container_loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 82vh;
+}
