--- a/src/app/styles/styles_widgets/TodayTimetable.module.css
+++ b/src/app/styles/styles_widgets/TodayTimetable.module.css
@@ -25,3 +25,18 @@
     width: 100%;
     height: 90%;
 }
+
+
+.container_loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 82vh;
+}
+
+
+.today:hover {
+    color: #57cc99;
+    cursor: pointer;
+}
