Added AuthPage and HomePage animations

--- a/src/app/styles/styles_features/Filters.module.css
+++ b/src/app/styles/styles_features/Filters.module.css
@@ -25,10 +25,10 @@
     overflow: hidden;
     position: absolute;
     height: 0;
-    
 }
 
 .container_show {
+    z-index: 1;
     position: absolute;
     margin: 10px 0 0 0;
     padding: 10px;
@@ -39,4 +39,17 @@
     width: 10vw;
     background-color: #f8f9fa;
     box-shadow: 0 0 10px 0 #6c757d;
+    animation-name: show;
+    animation-duration: 0.25s;
+}
+
+@keyframes show {
+    from {
+        transform: translateY(-20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 100;
+    }
 }
