--- a/src/app/styles/styles_shared/AuthNavigatorButton.module.css
+++ b/src/app/styles/styles_shared/AuthNavigatorButton.module.css
@@ -5,6 +5,7 @@
     background-color: transparent;
     font-size: larger;
     cursor: pointer;
+    transition: border-bottom-color 0.5s, color 0.5s;
 }
 
 .button {
