--- a/src/app/styles/styles_shared/AccountButton.module.css
+++ b/src/app/styles/styles_shared/AccountButton.module.css
@@ -35,6 +35,7 @@
     width: 100%;
     height: 50%;
     background-color: transparent;
+    transition: background-color 0.25s, color 0.25s;
     cursor: pointer;
 }
 
