--- a/src/app/styles/styles_shared/AuthInput.module.css
+++ b/src/app/styles/styles_shared/AuthInput.module.css
@@ -1,4 +1,5 @@
 .input,
+.input:focus,
 .input_valid,
 .input_error {
     padding: 10px;
@@ -6,18 +7,15 @@
     border-radius: 10px;
     outline: 3px solid #adb5bd;
     font-size: larger;
+    transition: outline 0.5s;
 }
 
-.input_valid {
+.input_valid,
+.input_valid:focus {
     outline: 3px solid #57cc99;
 }
 
-.input_error {
-    outline: 3px solid #c9184a;
-}
-
-.input:focus,
-.input_valid:focus,
+.input_error,
 .input_error:focus {
-    outline: 3px solid black;
+    outline: 3px solid #c9184a;
 }
