--- a/src/app/styles/styles_shared/AuthInputArea.module.css
+++ b/src/app/styles/styles_shared/AuthInputArea.module.css
@@ -20,6 +20,7 @@
 .label_error {
     margin: 0 0 0 5px;
     font-weight: 500;
+    transition: color 0.5s;
 }
 
 .label {
@@ -41,7 +42,16 @@
 }
 
 
+.error,
+.error_clear {
+    margin: 0 10% 0 0;
+    transition: color 0.5s;
+}
+
 .error {
-    margin: 0 10% 0 0; 
     color: #c9184a;
+}
+
+.error_clear {
+    color: transparent;
 }
