--- a/src/app/styles/styles_shared/EventInfoInput.module.css
+++ b/src/app/styles/styles_shared/EventInfoInput.module.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
     outline: 3px solid #ced4da;
     font-size: larger;
+    transition: outline-color 0.25s;
 }
 
 .input::placeholder {
