--- a/src/app/styles/styles_shared/NavigatorButton.module.css
+++ b/src/app/styles/styles_shared/NavigatorButton.module.css
@@ -4,6 +4,7 @@
     border-radius: 100%;
     background-color: transparent;
     color: #6c757d;
+    transition: background-color 0.25s, color 0.5s;
     cursor: pointer;
 }
 
