--- a/src/app/styles/styles_widgets/Event.module.css
+++ b/src/app/styles/styles_widgets/Event.module.css
@@ -1,6 +1,4 @@
 .container,
-/* .container_practice_checked,
-.container_lecture_checked, */
 .container_test_checked,
 .container_project_checked,
 .container_colloquium_checked,
@@ -13,52 +11,55 @@
     height: 100%;
     border-radius: 10px;
     background-color: #f8f9fa;
+    transition: transform 0.25s;
     cursor: pointer;
+}
+
+.container:hover,
+.container_test_checked:hover,
+.container_project_checked:hover,
+.container_colloquium_checked:hover,
+.container_homework_checked:hover {
+    z-index: 0;
+    transform: scale(1.05);
 }
 
 .container {
     border: 3px solid #ced4da;
 }
 
-/* .container_practice_checked {
-    border: 3px solid #FFFAA0;
-}
-
-.container_lecture_checked {
-    border: 3px solid #f3d5b5;
-} */
-
 .container_test_checked {
-    /* border: 3px solid #57cc99; */
     border: 3px solid #80ed99;
 }
 
 .container_project_checked {
-    /* border: 3px solid #c9184a; */
     border: 3px solid #ffb3c1;
 }
 
 .container_colloquium_checked {
-    /* border: 3px solid #0077b6; */
     border: 3px solid #90e0ef;
 }
 
 .container_homework_checked {
-    /* border: 3px solid #5a189a; */
     border: 3px solid #e0aaff;
 }
 
+.type,
+.type_practice_checked,
+.type_lecture_checked {
+    transition: color 5s;
+}
 
 .type {
     color: #ced4da;
 }
 
 .type_practice_checked {
-    color: #FFAA33;
+    color: #2ec4b6;
 }
 
 .type_lecture_checked {
-    color: #b08968;
+    color: #e85d04;
 }
 
 
