--- a/src/app/styles/styles_widgets/TemplateCard.module.css
+++ b/src/app/styles/styles_widgets/TemplateCard.module.css
@@ -74,6 +74,11 @@
     background-color: transparent;
     color: #57cc99;
     cursor: pointer;
+    transition: background-color 0.1s;
+}
+
+.button:active {
+    background-color: #e9ecef;
 }
 
 
