--- a/src/app/styles/styles_widgets/Template.module.css
+++ b/src/app/styles/styles_widgets/Template.module.css
@@ -31,6 +31,7 @@
 
 .changer {
     color: #adb5bd;
+    transition: color 0.5s;
 }
 
 .changer:hover {
@@ -39,5 +40,15 @@
 
 
 .icon {
+    border-radius: 100%;
     color: #c9184a;
+    transition: background-color 0.25s, color 0.5s;
+}
+
+.icon:hover {
+    background-color: #ffccd5;
+}
+
+.icon:active {
+    color: #a4133c;
 }
